<resources>
    <string name="app_name">Score</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_label">Button</string>
    <string name="hint_txt">Input your name</string>
    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 points</string>
    <string name="label_add3">+3 points</string>
    <string name="btn_reset_label">Reset</string>
    <string name="teamA">TeamA</string>
    <string name="_0">0</string>
    <string name="teamB">TeamB</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_hint">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
</resources>
